unpackaged/main/default/objects/BypassTrigger__c/BypassTrigger__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used in order to assign a bypass trigger to any user - Done by</description>
    <label>BypassTrigger</label>
</CustomObject>