unpackaged/main/default/objects/BypassTrigger__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass Trigger on Account</description>
    <label>Account</label>
    <type>Checkbox</type>
</CustomField>