unpackaged/main/default/objects/BypassTrigger__c/fields/CaseApex__c.field-meta.xml
<CustomField>
    <fullName>CaseApex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Apex</label>
    <type>Checkbox</type>
</CustomField>