unpackaged/main/default/objects/BypassTrigger__c/fields/CaseFlows__c.field-meta.xml
<CustomField>
    <fullName>CaseFlows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Flows</label>
    <type>Checkbox</type>
</CustomField>